feat: 灌库入口支持 pdf/docx 等多格式解析
- 新增 apache-tika 解析器依赖，与已有 pdfbox 配合
- LLMTest#testUploadKnowledgeLibrary 改为按扩展名显式分派 parser(parserFor)：
  md/txt→TextDocumentParser，pdf→PdfBox，doc/docx/xls→Tika
- 新增 DocumentParserSupportTest：纯解析器验证 md/pdf/docx 均能抽出可读中文，
  并带 PUA 乱码拦截（中文 PDF 无 ToUnicode 时会静默产出私用区字符）

说明：LangChain4j 单参 loadDocument(path) 默认解析器由 classpath SPI 决定、
不按扩展名自动识别，故必须显式传 parser。评估语料刻意保持规范 md：
pdf 多为重排版文本，切分点漂移会导致个别查询 Recall@1 掉点。